--- a/PictureLibrary-API/FileSystemInfo.resx
+++ b/PictureLibrary-API/FileSystemInfo.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ImagesDirectory" xml:space="preserve">
-    <value>Images/</value>
+    <value>Images\</value>
   </data>
   <data name="RootDirectory" xml:space="preserve">
-    <value>PictureLibraryFileSystem/</value>
+    <value>\PictureLibraryFileSystem\</value>
   </data>
 </root>
